# bry-challenge

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  RELATORIO.md  relatorio.md  vcpkg.json
data/: doc.txt.p7s  doc.txt.sha  signed.p7s
include/bry_challenge/: core.h
include/bry_challenge/core/: msg_digest.h
src/: bry_server.cpp  bry_signature.cpp  bry_verify.cpp  main.cpp
src/bry_checksum/: main.cpp
src/bry_signature/: main.cpp
src/bry_verify/: main.cpp
src/core/: cms_signature.cpp  core_utils.h  exception.cpp  msg_digest.cpp
tests/: CMakeLists.txt  p12_data.h  signed_data.h  test_msg_digest.cpp  tests.cpp
